# uscope_driver

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  conanfile.py  conanfile.txt
cmake-conan/: conan_provider.cmake
includes/: CLI11.hpp  command.hpp  command_processor.h  command_processor.hpp  commands.h  commands.hpp  configuration.hpp  data_linked_list.h  emulated_data_generator.hpp  fpga_bridge.h  fpga_bridge.hpp  options_repository.hpp  response.hpp  scope_handler.h  scope_thread.hpp  server_connector.h  server_connector.hpp  uscope_driver.h  uscope_driver.hpp
includes/deployment/: custom_deployer.hpp  deployer_base.hpp  deployment_utilities.hpp  hil_bus_map.hpp  hil_deployer.hpp  hil_emulator.hpp
includes/hil/: hil_bus_map.hpp  hil_deployer.hpp  hil_emulator.hpp
includes/hw_emulation/: kernel_emulator.hpp
includes/hw_interface/: bus_accessor.hpp  channel_metadata.hpp  fpga_bridge.hpp  hw_address_maps.hpp  interfaces_dictionary.hpp  scope_manager.hpp  scope_thread.hpp  timing_manager.hpp  toolchain_manager.hpp
includes/hw_interface/bus/: bus_accessor.hpp  bus_sink.hpp  scope_accessor.hpp
includes/server_frontend/: command.hpp  command_processor.hpp  response.hpp  schema_validator.h  server_connector.hpp
includes/server_frontend/endpoints/: control_endpoints.hpp  cores_endpoints.hpp  platform_endpoints.hpp  scope_endpoints.hpp
includes/server_frontend/infrastructure/: command.hpp  command_processor.hpp  response.hpp  schema_validator.h  server_connector.hpp
mock_module/: Makefile  mock_module.c
scripts/: update_version.py
src/: command_processor.c  command_processor.cpp  data_linked_list.c  emulated_data_generator.cpp  fpga_bridge.c  fpga_bridge.cpp  hil_depoyer_standalone.cpp  options_repository.cpp  response.cpp  scope_handler.c  scope_thread.cpp  server_connector.c  server_connector.cpp  uscope_driver.c  uscope_driver.cpp
src/deployment/: custom_deployer.cpp  deployer_base.cpp  hil_bus_map.cpp  hil_deployer.cpp  hil_emulator.cpp
src/hil/: hil_bus_map.cpp  hil_deployer.cpp  hil_emulator.cpp
src/hw_emulation/: kernel_emulator.cpp
src/hw_interface/: bus_accessor.cpp  channel_metadata.cpp  fpga_bridge.cpp  scope_manager.cpp  scope_thread.cpp  timing_manager.cpp  toolchain_manager.cpp
src/hw_interface/bus/: bus_accessor.cpp  bus_sink.cpp  scope_accessor.cpp
src/server_frontend/: command_processor.cpp  schema_validator.cpp  server_connector.cpp
src/server_frontend/endpoints/: control_endpoints.cpp  cores_endpoints.cpp  platform_endpoints.cpp  scope_endpoints.cpp
src/server_frontend/infrastructure/: command_processor.cpp  schema_validator.cpp  server_connector.cpp
testing/: CMakeLists.txt  deployer.cpp  hil_addresses.hpp  kernel_emulator_standalone.cpp  testing_main.cpp
testing/deployer/: hil_depoyer_standalone.cpp
testing/deployment/: custom_deployer_test.cpp  emulation.cpp  fpga_bridge.cpp  fpga_bridge_mock.cpp  fpga_bridge_mock.hpp  hil_addresses.hpp  hil_deployer_tests.cpp  hil_deployer_v2.cpp
testing/endpoints/: control_endpoints.cpp  cores_endpoints.cpp
testing/server_emulation/: command.py
